fixed nabar overflow in smaller height

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ a {
 
 #navbar {
     width: 100vw;
-    height: 10vh;
+    height: 75px;
     top: 0;
     left: 0;
     position: sticky;
